--- a/Readme
+++ b/Readme
@@ -1,4 +1,6 @@
-# Project Description: 
+# Simple-Calculator
+___
+## Project Description: 
 
 In this assignment, I created a basic calculator using HTML, CSS, and
 JavaScript. The goal of this project is to develop a functional calculator that can perform
